first draft identifers intro

--- a/docs/60_topics/61_identifiers/00_identifiers.mdx
+++ b/docs/60_topics/61_identifiers/00_identifiers.mdx
@@ -6,6 +6,8 @@ id: "identifiers"
 
 # Identifiers
 
-![Under Construction](/img/Constr_2bl.png)
+Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems will typically also use an identifier system. Specific to chemistry, [InChI] codes serve as an identifier for chemical substances. 
 
-This article is under construction.
+## Sources and further information
+
+- [The InChI Code](https://doi.org/10.1021/acs.jchemed.8b00090)
