--- a/docs/60_topics/61_identifiers/00_identifiers.mdx
+++ b/docs/60_topics/61_identifiers/00_identifiers.mdx
@@ -6,7 +6,7 @@ id: "identifiers"
 
 # Identifiers
 
-Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems will typically also use an identifier system. Specific to chemistry, [InChI] codes serve as an identifier for chemical substances. 
+Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems will typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as an identifier for chemical substances. 
 
 ## Sources and further information
 
