chore: remove unnec. component

--- a/docs/10_domains/40_polymer_chemistry.mdx
+++ b/docs/10_domains/40_polymer_chemistry.mdx
@@ -3,7 +3,7 @@ title: "Polymer Chemistry"
 ---
 
 
-import PolymerMethods from '@site/src/components/PolymerMethods.js';
+import Methods from '@site/src/components/Methods.js';
 
 :::info Summary:
 
@@ -41,7 +41,7 @@ The Chemotion-ELN was initially developed for organic chemistry and is now adapt
 
 In an effort to realize research data management in line with the FAIR principles, the data can be published in a repository including raw and processed data for reuse, directly from the Chemotion-ELN. The use of the Chemotion-ELN enables a direct transfer of research data and the respective metadata into the Chemotion Repository. Subsequently, these data are automatically shared with other repositories, e.g. PubChem. For the publication of research data in other discipline-specific repositories, data have to be exported from the Chemotion-ELN and uploaded into the respective database.
 
-<PolymerMethods defaultProfile={"polymer"} />
+<Methods defaultProfile={"polymer"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
