--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -3,7 +3,7 @@ title: "Ontology"
 ---
 
 :::info Summary:
-The term ontology, as used in our context, refers to a formally specified conceptualisation of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a *[FAIR](/docs/topics/fair/)* and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the *[ELN](/docs/topics/eln/)*. However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with ew insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagree with, knowing the core concepts of ontologies in one's research domain is helpful in a FAIR RDM context. To get an overview of different ontologies or to work with them, one can use different web services, such as the *[NFDI4Chem Terminology Service](https://terminology.nfdi4chem.de/ts/index). 
+The term ontology, as used in our context, refers to a formally specified conceptualisation of a certain research domain that is focused on answering the question of what can and needs to be represented in this domain. An ontology thus defines a collection of technical terms that can be used to semantically describe research data in a *[FAIR](/docs/topics/fair/)* and machine-readable way by the means of annotating the research data with these technical terms. This is best done automatically behind the scenes by your everyday work apps like the *[ELN](/docs/topics/eln/)*. However, as automated ontology-based annotation is not the standard yet, as ontologies evolve with new insights gained from research, and, as they might contain term definitions which a domain expert (e.g. a chemist like you) might disagree with, knowing the core concepts of ontologies in one's research domain is helpful in a FAIR RDM context. To get an overview of different ontologies or to work with them, one can use different web services, such as the *[NFDI4Chem Terminology Service](https://terminology.nfdi4chem.de/ts/index). 
 :::
 
 ## Introduction
