chore: added chips to disciplines

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -4,6 +4,9 @@ nfdi4chem-id: dsoic
 ---
 
 import Methods from '@site/src/components/Methods.js';
+import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
+
+<LbeChip title="inorganic chemistry" /><LbeChip title="organic chemistry" />
 
 :::info Summary:
 
