--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -4,6 +4,10 @@ nfdi4chem-id: dac
 ---
 
 import Methods from '@site/src/components/Methods.js';
+import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
+
+<LbeChip title="analytical chemistry" /><LbeChip title="chemometric" />
+
 
 :::info Summary:
 
