--- a/docs/10_domains/30_physical_chemistry.mdx
+++ b/docs/10_domains/30_physical_chemistry.mdx
@@ -3,6 +3,10 @@ title: "Physical and Computational Chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
+import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
+
+<LbeChip title="physical chemistry" /><LbeChip title="cheminformatics" />
+
 
 :::info Summary:
 
