--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -3,6 +3,10 @@ title: "Medicinal/Pharmaceutical Chemistry"
 ---
 
 import Methods from '@site/src/components/Methods.js';
+import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
+
+<LbeChip title="medicinal chemistry" /><LbeChip title="epidemiology" />
+
 
 :::info Summary:
 
