feat: remove dmp image, replace by word cloud

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -2,6 +2,8 @@
 title: "Data Management Plan"
 ---
 
+import KbTagCloud from '@site/src/components/KbTagCloud.js';
+
 # Data Management Plan (DMP)
 
 ## Introduction
@@ -14,7 +16,8 @@ A DMP, like an [electronic laboratory notebook](/docs/topics/eln) or even a labo
 
 In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on. The following [elements](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html) are included in a DMP:
 
-![DMP](/img/data/DMP.png)
+<KbTagCloud cloudTags={[ "Existing data", "Format", "Metadata", "Storage and backup", "Security", "Responsibility", "Intellectual property rights", "Access and sharing", "Audience", "Selection and retention periods", "Archiving and preservation", "Ethics and privacy", "Budget", "Data organization", "Quality Assurance", "Legal requirements" ]} min={20} max={35} shuffle={false} />
+
 
 ## Benefits of a DMP
 
