--- a/docs/60_topics/61_identifiers/00_identifiers.mdx
+++ b/docs/60_topics/61_identifiers/00_identifiers.mdx
@@ -6,8 +6,13 @@ id: "identifiers"
 
 # Identifiers
 
-Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems will typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as an identifier for chemical substances. 
+Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. A further example in chemistry is the [Chemical Abstracts Service (CAS) Registry Number](https://www.cas.org/solutions/cas-custom-services/cas-registry-services), a unique identifier assigned to each chemical substance that is indexed in the [CAS database](https://www.cas.org/support/documentation/cas-databases). CAS numbers are widely used in chemical literature and databases, and they are recognized as an international standard.
+
+
+In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as a machine-readable identifier for chemical substances.
+
 
 ## Sources and further information
 
 - [The InChI Code](https://doi.org/10.1021/acs.jchemed.8b00090)
+- German: [https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
