added a bit more info and german link

--- a/docs/60_topics/61_identifiers/00_identifiers.mdx
+++ b/docs/60_topics/61_identifiers/00_identifiers.mdx
@@ -11,8 +11,9 @@ Identifiers are typically unique codes aimed to identify something in the materi
 
 In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as a machine-readable identifier for chemical substances.
 
+In terms of the [FAIR data principles](docs/fair), identifiers should be machine-readable and help interlink related data. For example, referring to the DOI of the associated published journal article in a datasets metadata helps describe and lend context to the data. 
 
 ## Sources and further information
 
 - [The InChI Code](https://doi.org/10.1021/acs.jchemed.8b00090)
-- German: [https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
+- German: [Forschungsdaten.info: Persistente Identifikatoren](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
