--- a/docs/60_topics/63_data_description_annotation/20_ontology.mdx
+++ b/docs/60_topics/63_data_description_annotation/20_ontology.mdx
@@ -15,7 +15,7 @@ The term ontology, as used in our context, refers to a formally specified concep
 Image Attribution: Philip Strömert, Oliver Koepler, Johannes Hunold, Steffen Neumann, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
 
 
-Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analyzed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. As can be seen exemplarily in the graphical abstract above, ontologies, taxonomies, terminologies or controlled vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data. Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones. Based on an [analysis done in Task Area 6.1](https://doi.org/10.1515/pac-2021-2007) of the NFDI4Chem project, the present article provides a commented selections of those ontologies that seem most suitable for a FAIR RDM in chemistry, as well as a very brief [glossary](/docs/ontology#glossary) of ontological technical terms.
+Research data is more than the aggregation of numbers or images in a scientific journal article, experimental section, or supplementary information. To fully reproduce the deduction of the results, we need access to the raw data and how it was generated, processed and analyzed. While humans can grasp all the semantics and knowledge expressed in articles and their experimental sections, computers can not do so without fine grained metadata annotations. As can be seen exemplarily in the graphical abstract above, ontologies, taxonomies, terminologies or controlled vocabularies can be used to semantically describe research data, producing this FAIR and machine-readable data. Quite a few ontologies already exist for the semantic description of general scientific concepts and relations, as well as for chemistry specific ones. Based on an [analysis done in Task Area 6.1](https://doi.org/10.1515/pac-2021-2007) of the NFDI4Chem project, the present article provides a commented selection of those ontologies that seem most suitable for a FAIR RDM in chemistry, as well as a very brief [glossary](/docs/ontology#glossary) of ontological technical terms.
 
 ## Graphical overview of chemical ontologies
 This graphical overview shows chemistry specific ontologies suitable for a FAIR RDM with regard to their position in the [BFO](#bfo)/[OBO Foundry](http://www.obofoundry.org/) framework. 
@@ -29,7 +29,7 @@ Here we can see that these ontologies have different scopes, which means they on
 This tabular overview lists the suitable ontologies with regard to:
 * their general research domain, 
 * their open access license, 
-* the possibility of reusing them in a modular way (wheras a BFO alignment and OBO compatibility indicates an increased possibility),
+* the possibility of reusing them in a modular way (whereas a BFO alignment and OBO compatibility indicates an increased possibility),
 * and, their use in known applications.
 
 | Ontology | Domain | License | Modularity | Used in |
