--- a/docs/60_topics/62_data_formats/00_format_standards.mdx
+++ b/docs/60_topics/62_data_formats/00_format_standards.mdx
@@ -145,6 +145,6 @@ The structure data file (SDF) is a derivative of the chemical data file and can 
 
 ## Sources and further information
 
-- https://doi.org/10.1039/C7NP00064B
-- https://doi.org/10.1039/C6NP00022C
-- https://doi.org/10.1002/mrc.5146
+- [The value of universally available raw NMR data for transparency, reproducibility, and integrity in natural product research](https://doi.org/10.1039/C7NP00064B)
+- [Dissemination of original NMR data enhances reproducibility and integrity in chemical research](https://doi.org/10.1039/C6NP00022C)
+- [NMReDATA: Tools and applications](https://doi.org/10.1002/mrc.5146)
