--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -3,12 +3,16 @@ title: "Data Publication"
 slug: "/data_publication"
 id: "data_publication"
 ---
+import useBaseUrl from '@docusaurus/useBaseUrl';
 
 # Data Publication
 
-<!-- image ideas? -->
-
 In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, however, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these research data in a [FAIR](/docs/fair) manner by including, for example, [machine-readable chemical structures](/docs/machine-readable_chemical_structures), [standard data formats](/docs/format_standards), and rich [metadata](/docs/metadata) adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
+
+<img align="center" src={useBaseUrl('/img/data_publication_brian_hole_CC_BY_40.png')} alt="Data Publication Brian Hole CC BY 4.0" width="80%" />
+
+(Source: Brian Hole, CC BY 4.0, [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
+
 
 [Research data repositories](/docs/repositories) serve as the primary method to publish research data, while [smart Lab](/docs/smartlab) solutions, such as the [Chemotion ELN], can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles) to be published alongside the results. 
 
