added main authors to data article via their ORCID iD

--- a/docs/50_data_publication/50_data_articles.mdx
+++ b/docs/50_data_publication/50_data_articles.mdx
@@ -26,3 +26,6 @@ Together, the deposited FAIR dataset and the citable peer-reviewed data manuscri
 ## Further information
 
 - [List of data journals on Forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Journals)
+
+----
+Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-7899-71921](https://orcid.org/0000-0002-7899-7192)
