chore: quick and dirty deepl of intro page

--- a/i18n/de/docusaurus-plugin-content-docs/current/00_intro/00_intro.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/00_intro/00_intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Introduction"
+title: "Einführung"
 slug: "/intro"
 id: "intro"
 ---
@@ -10,81 +10,81 @@ import IntroButton from '@site/src/components/IntroButton.js';
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10"/>
 
-The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyse, disclose, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
+Die NFDI4Chem Knowledge Base bietet Informationen und Empfehlungen für die Digitalisierung aller wichtigen Schritte in der chemischen Forschung, um Wissenschaftler in ihren Bemühungen zu unterstützen, Forschungsdaten zu sammeln, zu speichern, zu verarbeiten, zu analysieren, offenzulegen und wiederzuverwenden. Diese Wissensdatenbank ist von [RDMkit](https://rdmkit.elixir-europe.org/index.html) inspiriert, wurde aber speziell auf Chemiker als Endnutzer zugeschnitten.
 
-Actions to [promote Open Science and Research Data Management](https://riojournal.com/article/55852/) in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.
+Maßnahmen zur [Förderung von Open Science und Forschungsdatenmanagement](https://riojournal.com/article/55852/) in Übereinstimmung mit den FAIR-Datenprinzipien werden von alltäglichen Nutzern vorgestellt und reichen von der Planung und Umsetzung bis zur Veröffentlichung und Wiederverwendung.
 
 
-## Why is RDM important for chemistry?
+## Warum ist FDM wichtig für die Chemie?
 
-:::danger Notice:                                
-Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an [irretrievable loss of knowledge](https://riojournal.com/article/55852/).
+:::danger Anmerkung:                                
+Das Forschungsdatenmanagement in der Chemie ist derzeit nicht systematisch organisiert und individuelle Lösungen einzelner Institutionen führen zu einer geringen Sichtbarkeit, Zugänglichkeit und Nutzbarkeit von Forschungsergebnissen. Der Mehrwert der Bewahrung und Erforschung wissenschaftlicher Daten in der Chemie ist besonders hoch, da die Bedeutung der Daten oft unsterblich ist und ältere Daten auch für aktuelle Untersuchungen genutzt werden können. In den meisten Fällen ist es sogar zwingend erforderlich, auf ältere Daten zugreifen zu können, da insbesondere experimentelle Daten oder komplexe Simulationsdaten nur mit großem Aufwand generiert werden können. Ein Verlust von früher gewonnenen Daten kann ein [unwiederbringlicher Wissensverlust](https://riojournal.com/article/55852/) sein .
 :::
 
-- prevention of data loss and data security
-- verifiability, transparency and reproducibility
-- faster retrieval of data and information
-- saving time and resources
-- long-term availability of research data 
-- data re-use in new research projects
+- Verhinderung von Datenverlusten und Datensicherheit
+- Überprüfbarkeit, Transparenz und Reproduzierbarkeit
+- schnelleres Auffinden von Daten und Informationen
+- Einsparung von Zeit und Ressourcen
+- langfristige Verfügbarkeit von Forschungsdaten 
+- Wiederverwendung der Daten in neuen Forschungsprojekten
 
-## Navigation through knowledge base
+## Navigation durch die Knowledge Base
 
-:::info Guidance for getting started:
-The knowledge base offers different points of entry that help you in navigating the site and simplify the targeted search for information. Start learning more about RDM by selecting a domain or role, viewing the handling data articles, or finding information about electronic lab notebooks as part of a smartlab. Information on the publication of data is also provided.
+:::info Orientierungshilfe für den Einstieg:
+Die Wissensdatenbank bietet verschiedene Einstiegspunkte, die Ihnen die Navigation auf der Seite erleichtern und die gezielte Suche nach Informationen vereinfachen. Beginnen Sie damit, mehr über FDM zu erfahren, indem Sie einen Bereich oder eine Rolle auswählen, sich die Artikel zum Umgang mit Daten ansehen oder Informationen über elektronische Laborjournale als Teil eines Smartlab finden. Auch Informationen über die Veröffentlichung von Daten werden bereitgestellt.
 :::
 
+### Domänenspezifische Informationen
 
-### Domain-specific information
+Die Domänenseiten stellen einen beispielhaften Arbeitsablauf für verschiedene chemische Disziplinen entlang des Lebenszyklus von Forschungsdaten dar. Mehrere Domänen werden in einem Benutzerprofil dargestellt. Es werden Leitlinien für alle beteiligten Digitalisierungsschritte bereitgestellt und domänenspezifische Best Practices für FAIR-Daten angegeben. Finden Sie heraus, wie Sie gutes FDM und FAIR-Wissenschaft im Kontext Ihrer eigenen Disziplin anwenden können.
 
-The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline.
-
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domains"} />
-
-
-### Role-specific information
-
-The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role.
-
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Roles.svg"} text={"Roles"} />
+<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domänen"} />
 
 
-### Handling data
+### Rollenspezifische Informationen
 
-The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Data storage and archiving are also covered. Find a detailed description of the following aspects:
+Die Rollenseiten konzentrieren sich auf die Motivation für rollenspezifische Anforderungen und beantworten die Fragen, warum FDM wichtig ist und wie es umgesetzt werden kann. Verschaffen Sie sich einen schnellen Überblick über alle wichtigen FDM-Informationen in Bezug auf Ihre Rolle.
 
-- general basics
-- formal responsibilities and organisational conventions
-- technical implementations
-- further information and reading 
 
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
+<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Roles.svg"} text={"Rollen"} />
+
+
+### Umgang mit Daten
+
+Der Abschnitt über den Umgang mit Daten erläutert allgemeine Probleme und Herausforderungen im Zusammenhang mit FDM. Es werden problematische Aspekte des Umgangs mit Daten betrachtet, angefangen bei der Erstellung von Datenmanagementplänen, der Datenorganisation und der Datendokumentation. Auch die Speicherung und Archivierung von Daten wird behandelt. Hier finden Sie eine detaillierte Beschreibung der folgenden Aspekte:
+
+- allgemeine Grundlagen
+- formale Zuständigkeiten und organisatorische Konventionen
+- technische Umsetzungen
+- weitere Informationen und Literatur
+
+<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Umgang mit Daten"} />
 
 
 ### Smartlab
 
-To enable fully digitised workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab:
+Um vollständig digitalisierte Arbeitsabläufe in der Chemie zu ermöglichen, ist die Entwicklung und Bereitstellung einer modularen virtuellen Laborumgebung mit Konzepten, Diensten und Software (smartlab) unerlässlich. Elektronische Laborjournale sind ein wichtiger Bestandteil des smartlab:
 
-- designed as a modular platform
-- covering the entire data life cycle
-- possibility of integrating devices and using external information sources 
-- seamless data transfer to data repositories
+- konzipiert als modulare Plattform
+- Abdeckung des gesamten Datenlebenszyklus
+- Möglichkeit der Integration von Geräten und der Nutzung externer Informationsquellen 
+- nahtloser Datentransfer zu Datenrepositorien
 
 <IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Smartlab"} />
 
 
-### Data Publication
+### Datenpublikation
 
-In the category data publication you will find all the important information on the topic of publishing data:
+In der Rubrik Datenveröffentlichung finden Sie alle wichtigen Informationen zum Thema Datenpublikation:
 
-- What is a repository and how do I choose a suitable one?
-- Best practices for research data management 
-- Learn about data availability statements
-- Why are machine-readable chemical structures meaningful?
+- Was ist ein Repositorium und wie wähle ich ein geeignetes Repositorium aus?
+- Best Practices für das Management von Forschungsdaten 
+- Erfahren Sie mehr über Datenverfügbarkeitserklärungen
+- Warum sind maschinenlesbare chemische Strukturen sinnvoll?
 
-<IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
+<IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Datenpublikation"} />
 
 
 :::info Info: 
-NFDI4Chem offers regular RDM workshops. For more information and registration, please visit the [NFDI4Chem website](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/).
+NFDI4Chem bietet regelmäßig FDM-Workshops an. Weitere Informationen und die Möglichkeit zur Anmeldung finden Sie auf der [NFDI4Chem-Website](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/).
 :::
