data publication: added benefits

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -3,19 +3,35 @@ title: "Data Publication"
 slug: "/data_publication"
 id: "data_publication"
 ---
+
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
 # Data Publication
 
-In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, however, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these research data in a [FAIR](/docs/fair) manner by including, for example, [machine-readable chemical structures](/docs/machine-readable_chemical_structures), [standard data formats](/docs/format_standards), and rich [metadata](/docs/metadata) adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
+:::info Applies to:
+This article applies to all researchers who want to publish their data.
+:::
+
+## Motivation
+
+In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as rich [metadata](/docs/metadata), [data formats standards for analytical data](/docs/format_standards), and [machine-readable chemical structures](/docs/machine-readable_chemical_structures) and  adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
+
+## Benefits of data publication
 
 <img align="center" src={useBaseUrl('/img/data_publication_brian_hole_CC_BY_40.png')} alt="Data Publication Brian Hole CC BY 4.0" width="80%" />
 
 (Source: Brian Hole, CC BY 4.0, [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
+There are direct benefits for researchers of publishing research data. Data publication increase your career recognition, enables new collaborations and provided and citation advantage compared to articles without an associated and linked dataset in a research data repository. Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also the public sector will profits by enhanced public trust in science as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
+
+## How to start
 
 [Research data repositories](/docs/repositories) serve as the primary method to publish research data, while [smart Lab](/docs/smartlab) solutions, such as the [Chemotion ELN], can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles) to be published alongside the results. 
 
 A [Data Availability Statement](/docs/data_availability_statement) communicates how the data has been shared and how it can be accessed by others, ideally linking to the dataset via its [persistent identifier](/docs/identifiers). <!-- leave out "ideally"?--> This statement is typically included in the back matter of a published article. <!-- include more information on linking datasets to published artciles onc we have best practice examples (De Gruyter pilot)-->
 
 NFDI4Chem features datasets published by researchers and also assists in publishing research data. To find our more, head to [Lead by Example](/docs/lbe-intro).
+
+## Sources and further information
+
+- [The citation advantage of linking publications to research data](https://doi.org/10.1371/journal.pone.0230416)
