--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -14,7 +14,7 @@ This article applies to all researchers who want to publish their data.
 
 ## Motivation
 
-In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as rich [metadata](/docs/metadata), [data formats standards for analytical data](/docs/format_standards), and [machine-readable chemical structures](/docs/machine-readable_chemical_structures) and  adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
+In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as rich [metadata](/docs/metadata), [data formats standards for analytical data](/docs/format_standards), and [machine-readable chemical structures](/docs/machine-readable_chemical_structures) adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
 
 ## Benefits of data publication
 
@@ -22,9 +22,16 @@ In chemical research, we strive to share results with others, commonly through a
 
 (Source: Brian Hole, CC BY 4.0, [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
-There are direct benefits for researchers of publishing research data. Data publication increase your career recognition, enables new collaborations and provided and citation advantage compared to articles without an associated and linked dataset in a research data repository. Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also the public sector will profits by enhanced public trust in science as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
+There are direct benefits for researchers who publish their data. Data publication increase your career recognition, enables new collaborations and provided and citation advantage compared to articles without an associated and linked dataset in a research data repository. Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also the public sector will profits by enhanced public trust in science as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
 
 ## How to start
+
+There are to main ways to publish research data:
+
+- publish data in a [research data repository](/docs/repositories/)
+- publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
+
+Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data, while more manual, labour and time intensive preparation of datasets is required for generic repositories, retaining the level of FAIRNess.
 
 [Research data repositories](/docs/repositories) serve as the primary method to publish research data, while [smart Lab](/docs/smartlab) solutions, such as the [Chemotion ELN], can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles) to be published alongside the results. 
 
