added one sentence on DAS and workflows

--- a/docs/50_data_publication/60_data_availability_statement.mdx
+++ b/docs/50_data_publication/60_data_availability_statement.mdx
@@ -8,7 +8,9 @@ slug: "/data_availability_statement"
 
 The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
 
-The data availability statement enables [linking of the manuscript](/docs/data_publication) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via  [DOIs](/docs/pid), alternatively using the repository-specific identifiers or accession numbers.  
+The data availability statement enables [linking of the manuscript](/docs/data_publication) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via  [DOIs](/docs/pid), alternatively using the repository-specific identifiers or accession numbers.
+
+Depending on the publisher, the data availability statement may be direclty added to the manuscript submitted or is automatically added during manuscript submission via the respective publishers submission system.
 
 ## Templates for Data Availability Statements
 
