data publication article

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -31,13 +31,13 @@ There are to main ways to publish research data:
 - publish data in a [research data repository](/docs/repositories/)
 - publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
 
-Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data, while more manual, labour and time intensive preparation of datasets is required for generic repositories, retaining the level of FAIRNess.
+Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories requires manual FAIRification.
 
-[Research data repositories](/docs/repositories) serve as the primary method to publish research data, while [smart Lab](/docs/smartlab) solutions, such as the [Chemotion ELN], can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles) to be published alongside the results. 
+[Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via Chemotion Repository.
 
-A [Data Availability Statement](/docs/data_availability_statement) communicates how the data has been shared and how it can be accessed by others, ideally linking to the dataset via its [persistent identifier](/docs/identifiers). <!-- leave out "ideally"?--> This statement is typically included in the back matter of a published article. <!-- include more information on linking datasets to published artciles onc we have best practice examples (De Gruyter pilot)-->
+A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets should be linked using [persistent identifiers](/docs/pid/). <!-- include more information on linking datasets to published article once we have best practice examples (De Gruyter pilot)-->
 
-NFDI4Chem features datasets published by researchers and also assists in publishing research data. To find our more, head to [Lead by Example](/docs/lbe-intro).
+Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at [Lead by Example](/docs/datasets) for one of NFDI4Chem's featured datasets!
 
 ## Sources and further information
 
