--- a/docs/50_data_publication/51_lbe/00_lbe_intro.mdx
+++ b/docs/50_data_publication/51_lbe/00_lbe_intro.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Lead by Example"
-slug: "/lbe-intro"
-id: "lbe-intro"
+slug: "/lbe_intro"
+id: "lbe_intro"
 ---
 
 import IntroButton from '@site/src/components/IntroButton.js'
