--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -14,7 +14,9 @@ This article applies to all researchers who want to publish their data.
 
 ## Motivation
 
-In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as rich [metadata](/docs/metadata), [data formats standards for analytical data](/docs/format_standards), and [machine-readable chemical structures](/docs/machine-readable_chemical_structures) adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
+In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. 
+
+Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [data formats standards](/docs/format_standards) for analytical data, and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures), information on [license](/docs/license) and [provenance information](/docs/procenance/) adds value to the research results and enables discovery and reuse. Data publication is essential in ensuring findings are transparent and reproducible.
 
 ## Benefits of data publication
 
