--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -16,7 +16,7 @@ This article applies to all researchers who want to publish their data.
 
 In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. 
 
-Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [data formats standards](/docs/format_standards) for analytical data, and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures), information on [license](/docs/license) and [provenance information](/docs/procenance/) adds value to the research results and enables discovery and reuse. 
+Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [data formats standards](/docs/format_standards) for analytical data, and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures), information on [license](/docs/licences/) and [provenance information](/docs/provenance/) adds value to the research results and enables discovery and reuse. 
 
 Data publication is essential in ensuring findings are transparent and reproducible.
 
@@ -44,7 +44,7 @@ Field-specific repositories should be the first choice as these repositories enh
 A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets should be linked using [persistent identifiers](/docs/pid/). <!-- include more information on linking datasets to published article once we have best practice examples (De Gruyter pilot)-->
 
 :::danger Notice:  
-Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at [Lead by Example](/docs/datasets) for one of NFDI4Chem's featured datasets!
+Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at [Lead by Example Datasets](/docs/datasets) for one of NFDI4Chem's featured datasets!
 :::
 
 ## Sources and further information
