--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -28,7 +28,7 @@ There are direct benefits for researchers who publish their data. Data publicati
 
 (Source: Brian Hole, CC BY 4.0, [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
- Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also the public sector will profits by enhanced public trust in science as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
+ Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also, the public sector will profit by enhanced public trust in science as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
 
 ## How to start
 
