fix: into text digitalisation vs. digitsation

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -10,7 +10,7 @@ import IntroButton from '@site/src/components/IntroButton.js';
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10"/>
 
-The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyse, disclose, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
+The NFDI4Chem knowledge base provides information and recommendations to digitalise all key steps of chemical research to support scientists in their efforts to collect, store, process, analyse, publish, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
 
 Actions to [promote Open Science and Research Data Management](https://riojournal.com/article/55852/) in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.
 
