--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -12,7 +12,7 @@ import IntroButton from '@site/src/components/IntroButton.js';
 
 The NFDI4Chem knowledge base provides information and recommendations to digitalise all key steps of chemical research to support scientists in their efforts to collect, store, process, analyse, publish, and reuse research data. This knowledge base is inspired by [RDMkit](https://rdmkit.elixir-europe.org/index.html) but has been tailored specifically towards Chemists as end-users.
 
-Actions to [promote Open Science and Research Data Management](https://riojournal.com/article/55852/) in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.
+Actions to [promote Open Science and Research Data Management](https://riojournal.com/article/55852/) in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and reuse.
 
 
 ## Why is RDM important for chemistry?
@@ -26,7 +26,7 @@ Research Data Management in chemistry is currently not systematically organised 
 - faster retrieval of data and information
 - saving time and resources
 - long-term availability of research data 
-- data re-use in new research projects
+- data reuse in new research projects
 
 ## Navigation through knowledge base
 
@@ -37,16 +37,16 @@ The knowledge base offers different points of entry that help you in navigating 
 
 ### Domain-specific information
 
-The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline.
+The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline!
 
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domains"} />
+<IntroButton url={"/docs/domain_guide"} imgUrl={"/img/nfdi4chem_Domains.svg"} text={"Domains"} />
 
 
 ### Role-specific information
 
-The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role.
+The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role!
 
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Roles.svg"} text={"Roles"} />
+<IntroButton url={"/docs/role_guide/"} imgUrl={"/img/nfdi4chem_Roles.svg"} text={"Roles"} />
 
 
 ### Handling data
@@ -58,7 +58,7 @@ The handling data section explains common problems and challenges regarding RDM.
 - technical implementations
 - further information and reading 
 
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
+<IntroButton url={"/docs/data_guide/"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
 
 
 ### Smartlab
