--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -18,7 +18,7 @@ Actions to [promote Open Science and Research Data Management](https://riojourna
 ## Why is RDM important for chemistry?
 
 :::danger Notice:                                
-Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an [irretrievable loss of knowledge](https://riojournal.com/article/55852/).
+Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal, hence, older data can be reused for current investigations. In most cases, it is even mandatory to be able to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data is an [irretrievable loss of knowledge](https://riojournal.com/article/55852/).
 :::
 
 - prevention of data loss and data security
@@ -83,7 +83,6 @@ In the category data publication you will find all the important information on 
 - Why are machine-readable chemical structures meaningful?
 
 <IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
-
 
 :::info Info: 
 NFDI4Chem offers regular RDM workshops. For more information and registration, please visit the [NFDI4Chem website](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/).
