--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -63,7 +63,7 @@ The handling data section explains common problems and challenges regarding RDM.
 
 ### Smartlab
 
-To enable fully digitised workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab:
+To enable fully digital workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab:
 
 - designed as a modular platform
 - covering the entire data life cycle
