feat: added main authors to data publication

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -50,3 +50,6 @@ Still confused on how data publication in chemistry may look like? We do provide
 ## Sources and further information
 
 - [The citation advantage of linking publications to research data](https://doi.org/10.1371/journal.pone.0230416)
+
+----
+Main author: [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
